# esp32s3_device

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/lvgl/: CMakeLists.txt  lv_conf.h
components/mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050_task.c
components/mpu6050/include/: mpu6050.h  mpu6050_config.h  mpu6050_task.h
components/mymqtt/: CMakeLists.txt  mymqtt.c
components/mymqtt/include/: mymqtt.h  mymqtt_config.h
components/nvs_storage/: nvs_storage.c
components/nvs_storage/include/: nvs_storage.h
components/st7789/: CMakeLists.txt  st7789.c  st7789_task.c
components/st7789/include/: st7789.h  st7789_config.h  st7789_task.h
components/wifi/: CMakeLists.txt  wifi.c  wifi_credentials.c
components/wifi/include/: wifi.h  wifi_config.h  wifi_credentials.h
components/wifi_config/: CMakeLists.txt  wifi_config.c
components/wifi_config/include/: wifi_config.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  config.h  firefly.h  main.c
main/lvgl_port/: CMakeLists.txt  lv_port_disp.c  lv_port_disp.h  lvgl_port.c  lvgl_port.h  lvgl_task.c  lvgl_task.h  lvgl_ui.c  lvgl_ui.h  lvgl_ui_config.c  lvgl_ui_config.h
main/mqtt/: mqtt.c  mqtt.h
