idf_component_register(
    SRCS
        "main.c"
        "lvgl_port/lv_port_disp.c"
        "lvgl_port/lvgl_task.c"
        "lvgl_port/lvgl_ui.c"
    PRIV_REQUIRES
        spi_flash
        esp_timer
        wifi
        mpu6050
        st7789
        mymqtt
        lvgl
    INCLUDE_DIRS
        "."
        "lvgl_port"
)
